# anywave-code

./: .dockerignore  .gitignore  .gitlab-ci.yml  AnyWave.sln  Anywave_INS.iss  Anywave_win64.iss  CMakeLists.txt  Dockerfile  INSTALL.txt  README.md  build-anywave-image.cmd  build-ubuntu-image.cmd  entrypoint.sh  linux.cmake  mac.cmake  sudoers.txt
matlab/: CMakeLists.txt
src/AnyWave/: AnyWave.cpp  AnyWave.h  AnyWave.pri  AnyWave.pro  AnyWave.qrc  AnyWave.ui  AnyWave.vcxproj  AnyWave.vcxproj.filters  AwBatch.cpp  AwCLGetData.cpp  AwCommandLineManager.cpp  AwCommandLineManager.h  AwCommandLogger.cpp  AwCommandLogger.h  AwComponents.cpp  AwComponents.h  AwExportDial.cpp  AwExportDial.h  AwExportDial.ui  AwFileOpenSave.cpp  AwHelpMenu.cpp  AwMATLAB.cpp  AwMapping.cpp  AwNoGUI.cpp  AwOpenFileDialog.cpp  AwOpenFileDialog.h  AwSelectTriggerChannelDialog.h  AwSelectTriggerChannelDialog.ui  AwUpdater.cpp  AwUpdater.h  CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.h  H2_0_5_120  H2output_HP15Hz_LP45Hz.mat  anywave_en.ts  anywave_fr.qm  anywave_fr.ts  anywave_linux.cmake  anywave_mac.cmake  (+6 more)
src/AnyWave/3DViewer/: Aw3DViewer.cpp  Aw3DViewer.h  AwSEEGInteractor.cpp  AwSEEGInteractor.h  AwSEEGViewer.cpp  AwSEEGViewer.h  AwSEEGWidget.cpp  AwSEEGWidget.h  AwSEEGWidget.ui  vtkPialReader.cpp  vtkPialReader.h
src/AnyWave/Batch/: AwAddEditBatchDialog.cpp  (+21 more)
src/AwCoreStatic/: AwCoreStatic.h  AwCoreStatic.vcxproj  AwCoreStatic.vcxproj.filters  CMakeLists.txt
src/AwEpochLib/: AwAverageChannel.cpp  AwAvgEpoch.cpp  AwAvgEpoch.h  AwEpoch.cpp  AwEpochAverageChannel.cpp  AwEpochComputeSettings.cpp  AwEpochDataBuffer.cpp  AwEpochLib.pri  AwEpochLib.pro  AwEpochLib.vcxproj  AwEpochLib.vcxproj.filters  AwEpochSignalView.cpp  AwEpochTree.cpp  CMakeLists.txt
src/AwMontageLib/: AwAVGChannel.cpp  AwMontage.cpp  AwMontageLib.pri  AwMontageLib.pro  AwMontageLib.vcxproj  AwMontageLib.vcxproj.filters  CMakeLists.txt
src/Core/: AwAmplitudeSettings.cpp  AwChannel.cpp  AwCoreLib.vcxproj  AwCoreLib.vcxproj.filters  AwDataBuffer.cpp  AwDataClient.cpp  AwEvent.cpp  AwEventManager.cpp  AwFilteringOptions.cpp  AwGlobalMarkers.cpp  AwMEGSensorManager.cpp  AwMarker.cpp  AwSensor.cpp  CMakeLists.txt  Core.pro
src/Filtering/: AwButterWorth.cpp  AwButterWorth.h  AwFilterAddButton.cpp  AwFilterAddButton.h  AwFilterGUI.cpp  AwFilterGUI.h  AwFilterGUI.ui  AwFilterModel.cpp  AwFilterModel.h  AwFilterPlugin.cpp  AwFilterSettings.cpp  AwFilterSwitchButton.cpp  AwFilterSwitchButton.h  AwFilterTableView.cpp  AwFiltering.cpp  CMakeLists.txt  Filtering.pro  Filtering.vcxproj  Filtering.vcxproj.filters
src/Graphics/: AwAmplitudeManager.cpp  AwColorMap.cpp  AwGraphicsLib.vcxproj  AwGraphicsLib.vcxproj.filters  AwGraphicsObjects.cpp  AwQwtColorMap.cpp  CMakeLists.txt  Graphics.pro  awgraphicslib_en.ts  awgraphicslib_fr.qm  awgraphicslib_fr.ts  qrc_amplitudes.cpp
src/HDF5/: AwHDF5.cpp  AwHDF5Lib.vcxproj  CMakeLists.txt  HDF5.pro
src/Layouts/: AwLayout.cpp  AwLayoutManager.cpp  CMakeLists.txt  Layouts.pro  layouts.qrc  layouts.vcxproj  layouts.vcxproj.filters  qrc_layouts.cpp
src/MappingLib/: AwMap.cpp  AwMeshManager.cpp  CMakeLists.txt  MappingLib.pro  MappingLib.vcxproj
src/Math/: AwFFT.cpp  AwHilbertTransform.cpp  AwMath.cpp  AwPWelch.cpp  AwPWelch.h  AwSpline2D.cpp  CMakeLists.txt  Math.pro  Math.vcxproj  spectrogram.cpp
src/MatlabLib/: AwMATLABFile.cpp  AwMATLABStruct.cpp  AwMatlabLib.cpp  CMakeLists.txt  MatlabLib.pro  MatlabLib.vcxproj  MatlabLib.vcxproj.filters
src/MatlabSupport/: AwMatlabSupport.cpp  AwMatlabSupport.h  CMakeLists.txt  MATLAB_Support.vcxproj  MatlabSupport.pro  awmatlabsupport_global.h
src/Mex/: AwChannel.m  AwIsProcessTerminated.cpp  AwSendMessage.cpp  CMakeLists.txt  Mex.pri  Mex.pro  UtilsCpp.h  addmarkers.pro  aw_addmarkers.cpp  aw_addmarkers.m  aw_captureicapanel.cpp  aw_captureicapanel.m  aw_connect.cpp  aw_getcapture.cpp  aw_getcapture.m  aw_getdata.cpp  aw_getdataex.cpp  aw_getfileinfo.cpp  aw_getfileinfo.m  aw_getmarkers.cpp  aw_getmarkers.m  aw_getmarkers_ex.cpp  aw_getplugininfo.cpp  aw_getplugininfo.m  aw_getpluginio.cpp  aw_getproperties.cpp  aw_gettriggers.cpp  aw_gettriggers.m  aw_sendcommand.cpp  aw_sendcommand.m  aw_setbf.cpp  aw_setbf.m  captureicapanel.pro  common.cpp  common.h  common.pro  configure.def  getcapture.pro  getdata.pro  getfileinfo.pro  (+7 more)
src/Process/: AwProcessGUIWidget.cpp  AwProcessIO.cpp  AwProcessLib.cpp  AwProcessOutputWidget.cpp  CMakeLists.txt  Process.pro  Process.vcxproj
src/PythonSupport/: AddMarkers.cpp  CMakeLists.txt  Channel.cpp  Channel.h  GetData.cpp  GetDataEx.cpp  GetMarkers.cpp  GetPluginInfo.cpp  GetProperties.cpp  Marker.cpp  Marker.h  OpenNewAnyWave.cpp  PythonSupport.pro  PythonSupport.vcxproj  PythonSupport.vcxproj.filters  RunAnyWave.cpp  SendMessage.cpp  common.cpp  common.h  pythonmodule.cpp  pythonmodule.h  pythonmodule_global.h
src/ReadWrite/: AwFileInfo.cpp  AwReadWriteLib.cpp  CMakeLists.txt  ReadWrite.pro  ReadWrite.vcxproj  ReadWrite.vcxproj.filters
src/Utilities/: AwUtilities.cpp  CMakeLists.txt  Utilities.pro  Utilities.vcxproj  bids.cpp  json.cpp
src/Widgets/: Aw2DGrid.cpp  Aw2DGrid.h  AwAddPredefinedMarker.cpp  AwAddPredefinedMarker.h  AwAddPredefinedMarker.ui  AwAddTargetChannels.cpp  AwAddTargetChannels.h  AwAddTargetChannels.ui  AwAmplitudeButton.cpp  AwAmplitudeWidget.cpp  AwAmplitudeWidget.ui  AwColorMap.cpp  AwComboCMap.cpp  AwComboColor.cpp  AwComboDS.cpp  AwComboMarker.cpp  AwDownSamplingWidget.cpp  AwDownSamplingWidget.ui  AwEditCustomListDial.cpp  AwEditCustomListDial.h  AwGainLevels.cpp  AwGetValueDialog.cpp  AwGetValueDialog.ui  AwGraphicsObjects.cpp  AwMapWidget.cpp  AwMarkAroundWidget.cpp  AwMarkAroundWidget.ui  AwMarkerInspector.cpp  AwMarkerInspector.ui  AwMarkingSettings.cpp  AwMarkingTool.cpp  AwMarkingTool.ui  AwMessageBox.cpp  AwQwtColorMap.cpp  AwQwtColorMap.h  AwSelectInputDataWidget.cpp  AwSelectInputDataWidget.ui  AwSpectroWidget.cpp  AwTimeScaleCombo.cpp  AwTimeScaleCombo.h  (+24 more)
src/matlab/: CMakeLists.txt  aw_debug_connect.m  aw_get_props.m  aw_getdata_ex.m  init_python.m  python_test.m
(+1705 files in other folders)
